# qt_linux_IM_Project

./: .gitignore
client/: CMakeLists.txt  IMClient.pro  main.cpp
client/network/: protocol.cpp  protocol.h  tcpclient.cpp  tcpclient.h
client/ui/: chatwindow.cpp  chatwindow.h  chatwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui
docs/: codex_learning_log.md  module3_protocol_design.md
server/: CMakeLists.txt  README.md  build.sh
server/include/common/: message.h  types.h
server/src/: client_manager.cpp  client_manager.h  epoll_wrapper.cpp  epoll_wrapper.h  main.cpp  protocol.cpp  protocol.h  reactor.cpp  reactor.h  server.cpp  server.h  utils.h
test_reports/: issue_log.md
